kubernetes/apps/base/llm/litellm/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-external
spec:
  hostnames:
    - litellm.jory.dev
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: litellm
          port: 4000
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-litellm-session-id
                value: '%REQ(x-session-id)%'
